# dataiku_factory

./: CLAUDE.md  README.md  install.sh  pyproject.toml
dataiku_mcp/: __init__.py  client.py  server.py
dataiku_mcp/tools/: __init__.py  administration.py  advanced_scenarios.py  code_development.py  data_quality.py  datasets.py  deployment.py  environment_config.py  managed_folders.py  monitoring_debug.py  productivity.py  project_exploration.py  recipes.py  scenarios.py  sql_execution.py
scripts/: mcp_server.py
